--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,6 +17,13 @@
             <!-- Post meta content-->
             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }}
                 by <a href="#">{{ post.author | lower }}</a></div>
+
+            {% if user.is_authenticated and user == post.author %}
+                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{post.pk}}" role="button">
+                    <i class = "fas fa-pen"></i>&nbsp; Edit Post
+                </a>
+            {% endif %}
+
             <!-- Post categories-->
             {% if post.category %}
             <span class="badge badge-secondary">{{post.category}}</span>
