--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,12 +1,19 @@
 {% extends 'blog/base.html' %}
 
     {% block main_area %}
-        <!-- Blog post-->
+        {% if user.is_authenticated %}
+            {% if user.is_superuser or user.is_staff %}
+                <a class="btn btn-info btn-sm float-right" href="/blog/create_post/" role="button">
+                    <i class="fas fa-pen"></i>&nbsp;&nbsp;New Post
+                </a>
+            {% endif %}
+        {% endif %}
+
         <h1>Blog
-            {% if category %}<span class="badge badge-secondary">{{category}}</span>
+            {% if category %}<span class="badge badge-secondary">{{ category }}</span>
             {% endif %}
         </h1>
-        {% if post_list.exists %}
+    {% if post_list.exists %}
         {% for p in post_list %}
         <div class="card mb-4" id="post-{{p.pk}}">
             {% if p.head_image %}
@@ -33,12 +40,15 @@
 
                 <!--tag area-->
                 {% if p.tags.exists %}
-                <i class="fas fa-tags"></i>
-                {% for tag in p.tags.all %}
-                <span class="badge badge-pill badge-light">{{tag}}</span>
-                {% endfor %}
-                <br/><br/>
+                    <i class="fas fa-tags"></i>
+                        {% for tag in p.tags.iterator %}
+                        <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
+                        {% endfor %}
+                    <br/>
+                    <br/>
                 {% endif %}
+
+
                 <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
             </div>
             <div class="card-footer text-muted">
