--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,80 +1,78 @@
+<!-- navbar 링크 -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- 네비게이션 바의 스타일을 지정하는 클래스, 밝은색 배경의 내비게이션 바-->
+    <div class="container"> <!-- 가장 바깥쪽 컨테이너 -->
+        <a class="navbar-brand" href="/">Do It Django</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/">Do It Django</a> <!-- 버튼 눌렀을 때 홈으로 -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/blog/">Blog</a>
+                    <a class="nav-link" href="/blog/">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about_me/">About Me</a>
                 </li>
-
-                {% block add_menu %}
+            </ul>
+            <ul class="navbar-nav ml-auto"> <!-- margin left  오른쪽 정렬-->
+                {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                       aria-expanded="false">
+                        {{user.username | upper }} <!--upper는 대문자-->
+                    </a>
+                    <div class="dropdown-menu ">
+                        <a class="dropdown-item" href="/accounts/logout/">LOGOUT</a>
+                    </div>
                 </li>
-                {% endblock %}
-
+                {% else  %}
                 <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a> <!--비활성화-->
+                    <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">
+                        <i class="fa-solid fa-right-to-bracket"></i>&nbsp; Log In</a> <!-- 동작 지점을 지정해줌 -->
                 </li>
-              </ul>
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="" data-toggle="modal" data-target="#loginModal">
-                        <i class="fa-sharp fa-solid fa-right-to-bracket"></i> &nbsp; Login
-                    </a> <!--id로 연결하려면 #id-->
-                  </li>
-              </ul>
-            </div>
+                {% endif %}
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <!-- modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
+<!-- modal 로그인 -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="loginModalLabel">로그인 방법 선택</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button> <!-- x버튼 -->
+                <h5 class="modal-title" id="loginModalLabel">로그인 방법 선택</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-sm-6">
-                        <button type="button" class="btn btn-outline-secondary btn-block btn-sm">
-                            <i class="fa-sharp fa-solid fa-g"></i> &nbsp; Login with Google
-                        </button>
-                        <button type="button" class="btn btn-outline-secondary btn-block btn-sm">
-                            <i class="fa-sharp fa-regular fa-envelope"></i> &nbsp; Login with E-mail
-                        </button>
+                    <div class="col-sm-6"> <!-- xs, sm, md, lg -->
+                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="">
+                            <i class="fa-brands fa-google "></i>&nbsp; Login with Google
+                        </a>
+                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/login/">
+                            <i class="fa-sharp fa-regular fa-envelope"></i>&nbsp; Login with USERNAME
+                        </a>
                     </div>
+
                     <div class="col-sm-6">
-                        <button type="button" class="btn btn-outline-primary btn-block btn-sm">
-                            <i class="fa-sharp fa-regular fa-envelope"></i> &nbsp; Sign up with E-mail
-                        </button>
+                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="accounts/signup/">
+                            <i class="fa-solid fa-square-envelope"></i>&nbsp; Sign up with E-mail
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
-          </div>
         </div>
     </div>
+</div>
