--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -74,56 +74,41 @@
 <!-- 댓글 section-->
 <section class="mb-5">
     <div id="comment-area">
+        <!-- Comment form-->
         <div class="card bg-light">
+            <div class="card-header">Leave a Comment</div>
             <div class="card-body">
-                <!-- Comment form-->
-                <form class="mb-4"><textarea class="form-control" rows="3"
-                                             placeholder="Join the discussion and leave a comment!"></textarea></form>
-                <!-- Comment with nested comments-->
-                <div class="d-flex mb-4">
-                    <!-- Parent comment-->
-                    <div class="flex-shrink-0"><img class="rounded-circle"
-                                                    src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."/>
-                    </div>
-                    <div class="ms-3">
-                        <div class="fw-bold">Commenter Name</div>
-                        If you're going to lead a space frontier, it has to be government; it'll never be private
-                        enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified
-                        risks.
-                        <!-- Child comment 1-->
-                        <div class="d-flex mt-4">
-                            <div class="flex-shrink-0"><img class="rounded-circle"
-                                                            src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
-                                                            alt="..."/></div>
-                            <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                And under those conditions, you cannot establish a capital-market evaluation of that
-                                enterprise. You can't get investors.
-                            </div>
-                        </div>
-                        <!-- Child comment 2-->
-                        <div class="d-flex mt-4">
-                            <div class="flex-shrink-0"><img class="rounded-circle"
-                                                            src="https://dummyimage.com/50x50/ced4da/6c757d.jpg"
-                                                            alt="..."/></div>
-                            <div class="ms-3">
-                                <div class="fw-bold">Commenter Name</div>
-                                When you put money directly to a problem, it makes a good headline.
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% if user.is_authenticated %}
+                <form class="mb-4">
+                    <textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
+                    <button type="submit" class="btn btn-primary float-right">submit</button>
+                </form>
+                {% else %}
+                    <a role="button" class="btn btn-outline-dark btn-block btn-sm"
+                       href="#" data-toggle="model" data-target="#loginModal">Log In and leave a comment </a>
+                {% endif %}
+            </div>
+        </div>
+         <div class="card">
+            <div class = "card-body">
+                {% if post.comment_set.exists %}
+                    {% for comment in post.comment_set.iterator %}
                 <!-- Single comment-->
-                <div class="d-flex">
+                <div class="d-flex mb-4" id="comment-{{ comment.pk }}">
                     <div class="flex-shrink-0"><img class="rounded-circle"
-                                                    src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."/>
+                                                    src="https://dummyimage.com/50x50/ced4da/6c757d.jpg&text={{ commenter.author.username }}" alt="..."/>
                     </div>
-                    <div class="ms-3">
-                        <div class="fw-bold">Commenter Name</div>
-                        When I look at the universe and all the ways the universe wants to kill us, I find it hard to
-                        reconcile that with statements of beneficence.
+                    <div class="media-body">
+                        <div class="fw-bold">{{ commenter.author.username }} &nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small>
+                        </div>
+                        <div>{{ comment.content | linebreaks }}</div>
+                        {% if comment.created_at != comment.modified_at %}
+                        <div class="text-muted float-right"><small>Updated: {{ comment.modified_at }}</small></div>
+                       {% endif %}
                     </div>
                 </div>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
     </div>
