--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -2,16 +2,17 @@
 
 {% load crispy_forms_tags %}
 
-  {% block head_title %}
-      Create Post- Blog
-  {% endblock %}
+    {% block head_title %}
+        Edit Post - Blog
+    {% endblock %}
+
     {% block main_area %}
-    <h1>Create New Post</h1>
-    <hr/>
-    <form method="post" enctype="multipart/form-data">{% csrf_token %}
-        <table>
-            {{ form | crispy }}
-        </table>
-        <button type="submit" class="btn btn-primary float-right">Submit</button>
-    </form>
+        <h1>Edit Post</h1>
+        <hr />
+        <form method="POST" enctype="multipart/form-data">{% csrf_token %}
+            <table>
+                {{ form | crispy }}
+            </table>
+            <button type="submit" class="btn btn-primary float-right">Submit</button>
+        </form>
     {% endblock %}
