--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
 {{ post.title }} - Blog
@@ -79,10 +80,15 @@
             <div class="card-header">Leave a Comment</div>
             <div class="card-body">
                 {% if user.is_authenticated %}
-                <form class="mb-4">
-                    <textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
-                    <button type="submit" class="btn btn-primary float-right">submit</button>
+
+                <form class="mb-4" id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
+                {% csrf_token %}
+                    <div class="form-group">
+                        {{ comment_form | crispy }}
+                    </div>
+                    <button type="submit" class="btn btn-primary float-right">Submit</button>
                 </form>
+
                 {% else %}
                     <a role="button" class="btn btn-outline-dark btn-block btn-sm"
                        href="#" data-toggle="model" data-target="#loginModal">Log In and leave a comment </a>
