--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,5 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
-
 {% block head_title %}
 {{ post.title }} - Blog
 {% endblock %}
@@ -19,12 +18,12 @@
             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }}
                 by <a href="#">{{ post.author | lower }}</a></div>
 
+            <!-- edit button -->
             {% if user.is_authenticated and user == post.author %}
-                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{post.pk}}" role="button">
-                    <i class = "fas fa-pen"></i>&nbsp; Edit Post
-                </a>
+            <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{post.pk}}" role="button">
+                <i class="fas fa-pen"></i>&nbsp;&nbsp;Edit Post
+            </a>
             {% endif %}
-
             <!-- Post categories-->
             {% if post.category %}
             <span class="badge badge-secondary">{{post.category}}</span>
@@ -32,7 +31,6 @@
             <span class="badge badge-secondary">미분류</span>
             {% endif %}
         </header>
-
         <!-- Preview image figure-->
         <figure class="mb-4">
             {% if post.head_image %}
@@ -41,15 +39,13 @@
             <img class="img-fluid rounded" src="https://picsum.photos/seed/{{post.id}}/800/200" alt="random image"/>
             {% endif %}
         </figure>
-
         <!-- Post content-->
         <section class="mb-5">
-            <p class="fs-5 mb-4">{{ post.content | linebreaksbr }}</p>
-
+            <p class="fs-5 mb-4">{{ post.content | linebreaksbr }}</p> <!-- linebreaksbr 은 엔터 기능 -->
             {% if post.tags.exists %}
             <i class="fas fa-tags"></i>
             {% for tag in post.tags.all %}
-            <span class="badge badge-pill badge-light">{{ tag }}</span>
+            <span class="badge badge-pill badge-light">{{tag}}</span>
             {% endfor %}
             <br/><br/>
             {% endif %}
@@ -72,48 +68,67 @@
     </div>
 </article>
 
-<!-- 댓글 section-->
+<!-- Comments section-->
 <section class="mb-5">
     <div id="comment-area">
         <!-- Comment form-->
         <div class="card bg-light">
             <div class="card-header">Leave a Comment</div>
             <div class="card-body">
-                {% if user.is_authenticated %}
 
-                <form class="mb-4" id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
-                {% csrf_token %}
+                <!-- 로그인 됐으면 댓글 작성 form을 보여주고, 안 되어 있으면 로그인하라는 버튼을 띄워라 -->
+                {% if user.is_authenticated %}
+                <!-- 댓글 작성하는 부분 -->
+
+                <!-- forms.py의 클래스와 views.py의 PostDetail에서 가져옴 -->
+                <form class="mb-4" id="comment-form" method="POST"
+                      action="{{ post.get_absolute_url }}new_comment/">
+                    {% csrf_token %} <!-- 장고 폼에서는 이걸 붙여야 함. 항상 만들어서 같이 가도록 해야 넘겨줌 -->
                     <div class="form-group">
-                        {{ comment_form | crispy }}
+                        {{ comment_form | crispy }} <!-- views.py에서 class PostDetail의
+                                                                     context['comment_form'] = CommentForm 이걸 띄움-->
                     </div>
-                    <button type="submit" class="btn btn-primary float-right">Submit</button>
+
+                    <button type=submit class="btn btn-primary float-right">Submit</button>
                 </form>
 
-                {% else %}
-                    <a role="button" class="btn btn-outline-dark btn-block btn-sm"
-                       href="#" data-toggle="model" data-target="#loginModal">Log In and leave a comment </a>
+                {% else %} <!-- -->
+                <a role="button" class="btn btn-outline-dark btn-block btn-sm"
+                   href="#" data-toggle="modal" data-target="#loginModal">Log In and leave a comment</a>
                 {% endif %}
             </div>
         </div>
-         <div class="card">
-            <div class = "card-body">
+
+        <div class="card">
+            <div class="card-body">
                 {% if post.comment_set.exists %}
-                    {% for comment in post.comment_set.iterator %}
+                {% for comment in post.comment_set.iterator %}
                 <!-- Single comment-->
-                <div class="d-flex mb-4" id="comment-{{ comment.pk }}">
+                <div class="d-flex mb-4">
                     <div class="flex-shrink-0"><img class="rounded-circle"
-                                                    src="https://dummyimage.com/50x50/ced4da/6c757d.jpg&text={{ commenter.author.username }}" alt="..."/>
+                                                    src="https://dummyimage.com/50x50/ced4da/6c757d.jpg&text={{comment.author}}"
+                                                    alt="..."/>
                     </div>
-                    <div class="media-body">
-                        <div class="fw-bold">{{ commenter.author.username }} &nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small>
+                    <div class="ms-3"> <!-- <div class="media-body"> -->
+                        {% if user.is_authenticated and comment.author == user %}
+                        <div class="float-right">
+                            <a role="button" class="btn btn-sm btn-info" id="comment-{{comment.pk}}-update-btn"
+                               href="/blog/update_comment/{{comment.pk}}/">
+                                <small>edit</small></a>
+                            <a role="button" class="btn btn-sm btn-danger" id="comment-{{comment.pk}}-delete-btn"
+                               href="/blog/delete_comment/{{comment.pk}}/">
+                                <small>delete</small></a>
                         </div>
-                        <div>{{ comment.content | linebreaks }}</div>
+                        {% endif %}
+                        <div class="fw-bold">{{comment.author.username}} &nbsp;&nbsp;<small class="text-muted">{{comment.created_at}}</small>
+                        </div>
+                        <div>{{comment.content | linebreaks}}</div>
                         {% if comment.created_at != comment.modified_at %}
-                        <div class="text-muted float-right"><small>Updated: {{ comment.modified_at }}</small></div>
-                       {% endif %}
+                        <p class="text-muted float-right"><small>Updated:{{comment.modified_at}}</small></p>
+                        {% endif %}
                     </div>
                 </div>
-                    {% endfor %}
+                {% endfor %}
                 {% endif %}
             </div>
         </div>
