--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -61,20 +61,53 @@
     {% else %}
         <h3>아직 게시물이 없습니다.</h3>
     {% endif %}
+    <!--paginator, page_obj-->
+    <!--page_obj.number / page_obj.previous_page_number / page_obj.next_page_number -->
+    <!--paginator.page_range (전체페이지가 range형태. 1~5까지 이런식.)-->
 
+    {% if is_paginated %}
     <!-- Pagination-->
     <nav aria-label="Pagination">
         <hr class="my-0"/>
         <ul class="pagination justify-content-center my-4">
-            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a>
+            <!--실제로 작업해야하는 부분-->
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}"><- Newer</a>
+                </li>
+            {% else %}
+            <li class="page-item disabled">
+                <a class="page-link"  href="#" aria-disabled="true"><- Newer</a>
             </li>
+            {% endif %}
+
+            <!-- page number -->
+            {% for i in paginator.page_range %}
+                {% if i == page_obj.number %}
+                <li class="page-item disabled"><a class = "page-link" href="#">{{i}}</a></li>
+                {% else %}
+                <li class="page-item"><a class = "page-link" href="?page={{i}}">{{i}}</a></li>
+                {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Older -></a>
+                </li>
+            {% else %}
+            <li class="page-item disabled">
+                <a class="page-link"  href="#" aria-disabled="true">Older -></a>
+            </li>
+            {% endif %}
+<!--
             <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
             <li class="page-item"><a class="page-link" href="#!">2</a></li>
             <li class="page-item"><a class="page-link" href="#!">3</a></li>
             <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
             <li class="page-item"><a class="page-link" href="#!">15</a></li>
-            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+            <li class="page-item"><a class="page-link" href="#!">Older</a></li> -->
         </ul>
     </nav>
+    {% endif %}
 
 {% endblock %}
